[package]
name = "flok2"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "flok2"
path = "src/main.rs"

[dependencies]
simple_table = { version = "0.3.0", git = "https://github.com/SolidDesignNet/simple_table" }
#simple_table = { version = "0.2.0", path = "../can/simple_table" }

# remove bundled for win32 
fltk = { version = "1.5.22" } #,features = ["fltk-bundled"]}
timer = "0.2.0"

clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.99"
chrono = { version = "0.4.26", features = ["serde"] }

serde = { version = "1.0.219", features = ["derive"] }
enum-ordinalize = { version = "4.3.2" }

# serde_json is just for the example, not required in general
serde_json = "1.0.143"
dateparser = "0.2.1"
